--- a/DataCleaning.ipynb
+++ b/DataCleaning.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600849869552",
-   "display_name": "Python 3.8.1 64-bit"
+   "name": "Python 3.8.1 64-bit",
+   "display_name": "Python 3.8.1 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "1e3b93fe7ff4eefec2af1a27ca518404a0f894a878f1a79cd53d09793530307f"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -28,6 +33,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import re\n",
     "import string  \n",
     "from emot.emo_unicode import UNICODE_EMO, EMOTICONS\n",
@@ -40,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets=pd.read_excel(\"SerbianTweetsDataSetCorrectedLabels.xlsx\",index_col=0)"
+    "tweets=pd.read_excel(\"ExcelDocs\\\\SerbianTweetsDataSetCorrectedLabels.xlsx\",index_col=0)"
    ]
   },
   {
@@ -52,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,14 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_successive_characters(text):\n",
     "    text=re.sub(r'((.)\\2{2,})',r'\\2',text)\n",
     "    text=re.sub(r\"([.,!?'])\", r' \\1 ', text)\n",
-    "    #text=re.sub(r'([.,!?:;_])\\1+',lambda m:m.group(1),text)\n",
     "    return text\n",
     "\n",
     "remove_successive=lambda x:remove_successive_characters(x)"
@@ -187,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_tweets['Text'].replace([' ',''], numpy.nan, inplace=True)\n",
+    "clean_tweets['Text'].replace([' ',''], np.nan, inplace=True)\n",
     "clean_tweets.dropna(subset=['Text'], inplace=True)"
    ]
   },
@@ -197,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_tweets.to_excel(\"Processed_Tweets.xlsx\")\n",
-    "clean_tweets.to_pickle(\"Processed_Tweets.pkl\")"
+    "clean_tweets.to_excel(\"ExcelDocs\\\\Processed_Tweets.xlsx\")\n",
+    "clean_tweets.to_pickle(\"PickleDataframes\\\\Processed_Tweets.pkl\")"
    ]
   }
  ]
