--- a/LemmaAndNegation.ipynb
+++ b/LemmaAndNegation.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "negation_words='nema nemamo neću ni necete nemate nemoj nećavši nisam necemo nemaš nemojmo nisu nisi neces nemaju neće niste stop necu nemam nećete nismo necavsi nemojte nećemo nije nece nit niti nećeš ne nemas'\n",
     "\n",
-    "tweets=pd.read_pickle(\"Processed_Tweets.pkl\")\n",
+    "tweets=pd.read_pickle(\"PickleDataframes\\\\Processed_Tweets.pkl\")\n",
     "number_of_tweets=len(tweets.index)\n",
     "step=200\n",
     "index=0\n",
