--- a/SentimentDictionary.ipynb
+++ b/SentimentDictionary.ipynb
@@ -108,7 +108,7 @@
     "words=[]\n",
     "pos_words_lemmas=[]\n",
     "\n",
-    "f = open('PositiveWordsDIct.txt','r', encoding='utf8')\n",
+    "f = open('TxtDocs\\\\PositiveWordsDict.txt','r', encoding='utf8')\n",
     "for word in f.read().split():\n",
     "    words.append(word)\n",
     "\n",
@@ -144,7 +144,7 @@
     "neg_words_lemmas=[]\n",
     "words=[]\n",
     "\n",
-    "f = open('NegativeWordsDict.txt','r',encoding='utf8')\n",
+    "f = open('TxtDocs\\\\NegativeWordsDict.txt','r',encoding='utf8')\n",
     "for word in f.read().split():\n",
     "    words.append(word)\n",
     "\n",
@@ -187,32 +187,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_file = open('PositiveSentimentWords.txt', 'w+',encoding='utf8')\n",
+    "text_file = open('TxtDocs\\\\PositiveSentimentWords.txt', 'w+',encoding='utf8')\n",
     "n = text_file.write('\\n'.join(pos_words_lemmas))\n",
     "text_file.close()\n",
     "\n",
-    "text_file = open('NegativeSentimentWords.txt', 'w+',encoding='utf8')\n",
+    "text_file = open('TxtDocs\\\\NegativeSentimentWords.txt', 'w+',encoding='utf8')\n",
     "n = text_file.write('\\n'.join(neg_words_lemmas))\n",
     "text_file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "['haha']"
-     },
-     "metadata": {},
-     "execution_count": 42
-    }
-   ],
-   "source": [
-    "doc = nlp('ahahhahahahahhahhhha')\n",
-    "get_lemmas(doc.conll_file.conll_as_string())"
    ]
   },
   {
