--- a/TweetAnalisys.ipynb
+++ b/TweetAnalisys.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets=pd.read_pickle('TweetsWithoutSW.pkl')\n",
+    "tweets=pd.read_pickle('PickleDataframes\\\\TweetsWithoutSW.pkl')\n",
     "tweets=tweets.drop('FilteredText',axis=1)\n",
     "tweets=tweets.reset_index(drop=True)"
    ]
@@ -94,12 +94,12 @@
    "source": [
     "def create_negative_words_array():\n",
     "    negative_words=[]\n",
-    "    with open('NegativeSentimentWords.txt','r', encoding='utf8') as f:\n",
+    "    with open('TxtDocs\\\\NegativeSentimentWords.txt','r', encoding='utf8') as f:\n",
     "        for line in f:\n",
     "            for word in line.split():\n",
     "                negative_words.append(word)\n",
     "\n",
-    "    with open('PositiveSentimentWords.txt','r',encoding='utf8') as f:\n",
+    "    with open('TxtDocs\\\\PositiveSentimentWords.txt','r',encoding='utf8') as f:\n",
     "       for line in f:\n",
     "          for word in line.split():\n",
     "             negative_words.append(''.join([word,'_NEG']))\n",
@@ -114,12 +114,12 @@
    "source": [
     "def create_positive_words_array():\n",
     "    positive_words=[]\n",
-    "    with open('PositiveSentimentWords.txt','r',encoding='utf8') as f:\n",
+    "    with open('TxtDocs\\\\PositiveSentimentWords.txt','r',encoding='utf8') as f:\n",
     "        for line in f:\n",
     "            for word in line.split():\n",
     "                positive_words.append(word)\n",
     "\n",
-    "    with open('NegativeSentimentWords.txt','r',encoding='utf8') as f:\n",
+    "    with open('TxtDocs\\\\NegativeSentimentWords.txt','r',encoding='utf8') as f:\n",
     "       for line in f:\n",
     "          for word in line.split():\n",
     "             positive_words.append(''.join([word,'_NEG']))\n",
@@ -134,7 +134,7 @@
    "source": [
     "def negative_words_from_dataset():\n",
     "    negative_words=[]\n",
-    "    with open('NegativeWordsFromDataset.txt','r', encoding='utf8') as f:\n",
+    "    with open('TxtDocs\\\\NegativeWordsFromDataset.txt','r', encoding='utf8') as f:\n",
     "        for line in f:\n",
     "            for word in line.split():\n",
     "                negative_words.append(word)\n",
@@ -149,7 +149,7 @@
    "source": [
     "def positive_words_from_dataset():\n",
     "    positive_words=[]\n",
-    "    with open('PositiveWordsFromDataset.txt','r', encoding='utf8') as f:\n",
+    "    with open('TxtDocs\\\\PositiveWordsFromDataset.txt','r', encoding='utf8') as f:\n",
     "        for line in f:\n",
     "            for word in line.split():\n",
     "                positive_words.append(word)\n",
