--- a/CollectRawTweetsAndRemoveDuplicats.ipynb
+++ b/CollectRawTweetsAndRemoveDuplicats.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1600834235891",
-   "display_name": "Python 3.8.1 64-bit"
+   "name": "Python 3.8.1 64-bit",
+   "display_name": "Python 3.8.1 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "1e3b93fe7ff4eefec2af1a27ca518404a0f894a878f1a79cd53d09793530307f"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -47,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +78,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>HandLabel</th>\n      <th>Text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Neutral</td>\n      <td>@Jovanana koima sta da im dozvoli...budalastine</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Negative</td>\n      <td>U ovom busu svi nešto kašlju</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Positive</td>\n      <td>Zašto je važno da uvek imate bočicu vode sa so...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Positive</td>\n      <td>51. Međunarodni sajam nameštaja u Beogradu htt...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Positive</td>\n      <td>@pticica212 hvala Vama :)</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>891</th>\n      <td>Negative</td>\n      <td>Na koji konto u aktivi vlada Srbije stavlja po...</td>\n    </tr>\n    <tr>\n      <th>892</th>\n      <td>Negative</td>\n      <td>RT @DaliborStojicic: Jel ima neko iz EPS-a na ...</td>\n    </tr>\n    <tr>\n      <th>896</th>\n      <td>Negative</td>\n      <td>RT @SasaRadulovich: Na javnom servisu ide prvo...</td>\n    </tr>\n    <tr>\n      <th>897</th>\n      <td>Negative</td>\n      <td>imala sam neki trip da su mi roditelji čitali ...</td>\n    </tr>\n    <tr>\n      <th>898</th>\n      <td>Neutral</td>\n      <td>.@samokazem_ Snagom argumenta, umesto argument...</td>\n    </tr>\n  </tbody>\n</table>\n<p>20196 rows × 2 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 3
     }
    ],
    "source": [
@@ -84,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_tweets.to_excel(\"SerbianTweetsDataSet.xlsx\")"
+    "unique_tweets.to_excel(\"ExcelDocs\\\\SerbianTweetsDataSet.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +108,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n\n    .dataframe thead tr:last-of-type th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th>Text</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>count</th>\n    </tr>\n    <tr>\n      <th>HandLabel</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Negative</th>\n      <td>6528</td>\n    </tr>\n    <tr>\n      <th>Neutral</th>\n      <td>8379</td>\n    </tr>\n    <tr>\n      <th>Positive</th>\n      <td>5289</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 5
     }
    ],
    "source": [
